# napi-rs-template

./: .gitignore  Cargo.toml  LICENSE  README.md  index.js  package.json
.github/workflows/: CI.yml  ci.yml
__test__/: index.spec.mjs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
tests/: napi.test.js
