[package]
edition = "2021"
name = "demo-napi"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.15.4", default-features = false, features = ["napi4"] }
napi-derive = "2.15.3"

[build-dependencies]
napi-build = "2.1.2"

[profile.release]
lto = true
